RESOLVED FIXED148631
[Cairo][WebGL] Upload the accelerated canvas as a texture by copying via GPU directly
https://bugs.webkit.org/show_bug.cgi?id=148631
Summary [Cairo][WebGL] Upload the accelerated canvas as a texture by copying via GPU ...
Jinyoung Hur
Reported 2015-08-31 08:06:01 PDT
[Cairo] Upload the accelerated canvas as a texture by GPU to GPU copy if possible
Attachments
Patch (6.44 KB, patch)
2015-08-31 08:18 PDT, Jinyoung Hur
no flags
Patch (6.82 KB, patch)
2015-08-31 09:06 PDT, Jinyoung Hur
no flags
Patch (6.82 KB, patch)
2015-08-31 09:11 PDT, Jinyoung Hur
no flags
Jinyoung Hur
Comment 1 2015-08-31 08:18:35 PDT
WebKit Commit Bot
Comment 2 2015-08-31 08:21:06 PDT
Attachment 260282 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Jinyoung Hur
Comment 3 2015-08-31 09:06:54 PDT
Jinyoung Hur
Comment 4 2015-08-31 09:11:21 PDT
Jinyoung Hur
Comment 5 2015-08-31 15:42:03 PDT
When an accelerated canvas needs to be uploaded as a gl texture, it would be better to copy it to texture directly via GPU using glCopyTexImage2D.
WebKit Commit Bot
Comment 6 2015-09-01 10:40:22 PDT
Comment on attachment 260286 [details] Patch Clearing flags on attachment: 260286 Committed r189216: <http://trac.webkit.org/changeset/189216>
WebKit Commit Bot
Comment 7 2015-09-01 10:40:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.